<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/guideLoginMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <EditText
        android:hint="@string/mail"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/guideLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal" />


    <Button
        android:id="@+id/questionPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPaswword"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textOn="@string/keepOn"
        android:textOff="@string/keepOff"/>

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/connect"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="0.14" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign"
        android:layout_marginTop="20dp"/>


</LinearLayout>